# mindone

0.5/: sitemap.xml
examples/cache_dit/cache_dit/: __init__.py  utils.py
examples/cache_dit/cache_dit/cache_factory/: __init__.py  cache_adapters.py  cache_blocks.py  cache_context.py  cache_interface.py  cache_types.py  forward_pattern.py  taylorseer.py  utils.py
examples/cache_dit/cache_dit/cache_factory/patch/: flux.py
examples/cache_dit/scripts/: run_flux.py  utils.py
examples/fast_video/src/sparsification/: __init__.py  block_sparse_attention.py
examples/fast_video/tests/: test_blockwise_attention.py  utils.py
examples/fastvideo/: requirements.txt
examples/fastvideo/examples/: example.py
examples/fastvideo/fastvideo/: __init__.py
examples/fastvideo/fastvideo/src/: utils.py
examples/fastvideo/fastvideo/src/configs/: utils.py
examples/fastvideo/fastvideo/src/configs/models/: __init__.py  base.py
examples/fastvideo/fastvideo/src/configs/pipelines/: __init__.py  base.py  hunyuan.py  registry.py
examples/fastvideo/fastvideo/src/configs/sample/: __init__.py  base.py  teacache.py
examples/fastvideo/fastvideo/src/distributed/: __init__.py  parallel_state.py
examples/fastvideo/fastvideo/src/entrypoints/: args.py  video_generator.py
examples/fastvideo/fastvideo/src/models/: hf_transformer_utils.py  registry.py
examples/fastvideo/fastvideo/src/models/loader/: component_loader.py  fsdp_load.py  weight_utils.py
examples/fastvideo/fastvideo/src/pipelines/: __init__.py  batch_info.py  composed_pipeline_base.py  lora_pipeline.py  registry.py
examples/fastvideo/fastvideo/src/sparsification/: CMakeLists.txt  README.md  __init__.py  block_sparse_attention.json  block_sparse_attention.py  block_sparse_attention_ascendc.cc  build_ascendc.sh  draft_attention.py
examples/fastvideo/fastvideo/src/worker/: __init__.py  executor.py  multiproc_executor.py  npu_worker.py
examples/fastvideo/fastvideo/tests/: test_blockwise_attention.py  test_draft_attention.py
examples/fastvideo/src/sparsification/: draft_attention.py
examples/fastvideo/tests/: test_blockwise_attention.py  test_draft_attention.py
examples/hunyuanvideo/hyvideo/: config.py
examples/hunyuanvideo/hyvideo/diffusion/pipelines/: pipeline_hunyuan_video.py
examples/hunyuanvideo/hyvideo/modules/: attention.py  models.py
examples/latte/: args_train.py  sample.py  train.py
examples/latte/configs/inference/: sky.yaml  toy_csv.yaml  ucf101.yaml
examples/latte/configs/training/: sky_numpy_video.yaml  sky_video.yaml  toy_csv_video_ft.yaml  toy_csv_video_train.yaml
examples/latte/data/: dataset.py
examples/latte/pipelines/: infer_pipeline.py
examples/movie_gen/moviegen/text_encoders/: byt5.py  byt5_torch.py
examples/movie_gen/tests/ut/: test_byt5_pynative.py
examples/movie_gen/tools/: download_convert_st.py
examples/moviegen/mg/utils/: model_utils.py
examples/opensora_hpcai/: README.md
examples/opensora_hpcai/configs/opensora-v1-1/inference/: sample_iv2v.yaml  sample_t2v.yaml
examples/opensora_hpcai/configs/opensora-v1-1/train/: stdit2_512x512x64.yaml  stdit2_576x1024x24.yaml  train_stage1.yaml  train_stage1_fit.yaml
examples/opensora_hpcai/configs/opensora-v1-2/inference/: sample_iv2v.yaml  sample_t2v.yaml
examples/opensora_hpcai/configs/opensora-v1-2/train/: train_stage1.yaml
examples/opensora_hpcai/docs/: quick_start.md
examples/opensora_hpcai/opensora/datasets/: aspect.py  bucket.py  video_dataset_refactored.py
examples/opensora_hpcai/opensora/models/layers/: blocks.py  rotary_embedding.py
examples/opensora_hpcai/opensora/models/mmdit/: layers.py  math.py  model.py
examples/opensora_hpcai/opensora/models/stdit/: stdit2.py  stdit3.py
examples/opensora_hpcai/opensora/models/text_encoder/: hfe.py
examples/opensora_hpcai/opensora/models/vae/: vae_temporal.py
examples/opensora_hpcai/opensora/pipelines/: __init__.py  infer_pipeline.py  train_pipeline.py
examples/opensora_hpcai/opensora/schedulers/: rectified_flow.py
examples/opensora_hpcai/opensora/schedulers/iddpm/: diffusion_utils.py
examples/opensora_hpcai/opensora/utils/: callback.py  cond_data.py  ema.py  metrics.py  model_utils.py  util.py
examples/opensora_hpcai/scripts/: args_train.py  inference.py  train.py
examples/opensora_hpcai/scripts/run/: run_train_os_v1.2_pynative.sh
examples/stable_diffusion_v2/: train_text_to_image.py
examples/stable_diffusion_v2/configs/train/: train_config_vanilla_v2.yaml
examples/stable_diffusion_v2/ldm/data/: dataset_refactored.py
examples/svd/data/: video_dataset.py
mindone/data/: loader.py  video_reader.py
mindone/models/: dit.py  fit.py  latte.py
mindone/models/modules/: __init__.py  attention.py  blockwise_attention.py  ring_attention.py
mindone/trainers/: adamw_bf16.py  callback.py
tests/ut/: test_blockwise_attention_graph.py  test_blockwise_attention_pynative.py
(+13 files in other folders)
